feat: feed i modul spolecznosci
